BufferObminy/buffer.txt
CashPay.java:6: error: pay(int) in CashPay cannot implement pay(int) in PayInterface
    void pay(int a){
         ^
  attempting to assign weaker access privileges; was public
1 error
package interface_pac;

public class CashPay implements PayInterface {

    @Override
    void pay(int a){
        System.out.println("Cash pay: "+ a + " money");
    }

}
